修复矩阵的物资读取逻辑